[package]
name = "drias"
version = "0.0.2"
edition = "2021"
build = "./src/build.rs"
description = "utilities for spans and diagnostics"
repository = "https://github.com/samhdev/drias"
license = "GPL-3.0-or-later"

[features]
diag = []
diag_api = ["diag"]
diag_ext = ["diag"]
diag_emulate = ["diag", "yansi"]
default = ["diag", "diag_api", "diag_ext", "diag_emulate"]

[dependencies]
proc-macro2 = "1.0.42"
yansi = { version = "0.5.1", optional = true }

[build-dependencies]
rustc_version = "0.4.0"